--- a/index.html
+++ b/index.html
@@ -14,12 +14,27 @@
         <div class="container">
             <h2 class="logo">NETFLIX</h2>
             <nav class="menu">
-                <a href="#">Inínio</a>
+                <a href="#">Início</a>
                 <a href="#">Séries</a>
                 <a href="#">Filmes</a>
                 <a href="#">Documentários</a>
             </nav>
         </div>
     </header>
+
+    <main>
+        <div class="filme-principal">
+            <div class="container">
+                <h3 class="titulo">House of Cards</h3>
+                <p class="descricao">Nada pode impedir o político sem escrúpulos Frank Underwood de conquistar Washington.</p>
+            </div>
+            <button role="button" class="botao">
+                ASSISTIR AGORA
+            </button>
+            <button role="button" class="botao">
+                MAIS INFORMAÇÕES
+            </button>
+        </div>
+    </main>
 </body>
 </html>
