--- a/index.html
+++ b/index.html
@@ -25,16 +25,21 @@
     <main>
         <div class="filme-principal">
             <div class="container">
-                <h3 class="titulo">House of Cards</h3>
-                <p class="descricao">Nada pode impedir o político sem escrúpulos Frank Underwood de conquistar Washington.</p>
+                <h3 class="titulo">HOUSE OF CARDS</h3>
+                <p class="descricao">Nada pode impedir o político sem escrúpulos Frank Underwood de conquistar Washington. Assista agora a nova temporada de House of Cards que está imperdível.</p>
+                <div class="botoes"><button role="button" class="botao">
+                    <i class="fas fa-play" ></i>
+                    ASSISTIR AGORA
+                </button>
+                <button role="button" class="botao">
+                    <i class="fas fa-info-circle"></i>
+                    MAIS INFORMAÇÕES
+                </button>
+                </div>
             </div>
-            <button role="button" class="botao">
-                ASSISTIR AGORA
-            </button>
-            <button role="button" class="botao">
-                MAIS INFORMAÇÕES
-            </button>
         </div>
     </main>
+
+    <script src="https://kit.fontawesome.com/a2cf858646.js" crossorigin="anonymous"></script>
 </body>
 </html>
