--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main.css">
 
+    <!-- responsividade -->
+    <link rel="stylesheet" href="style/responsive.css">
+
     <!-- owl css-->
     <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
     <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
@@ -32,7 +35,8 @@
             <div class="container">
                 <h3 class="titulo">HOUSE OF CARDS</h3>
                 <p class="descricao">Nada pode impedir o político sem escrúpulos Frank Underwood de conquistar Washington. Assista agora a nova temporada de House of Cards que está imperdível.</p>
-                <div class="botoes"><button role="button" class="botao">
+                <div class="botoes">
+                    <button role="button" class="botao">
                     <i class="fas fa-play" ></i>
                     ASSISTIR AGORA
                 </button>
